--- a/style/sass/partials/sickbeard.scss
+++ b/style/sass/partials/sickbeard.scss
@@ -64,7 +64,7 @@
   background-color: $panel-background;
   position: absolute;
   right: 0;
-  padding: 8px;
+  padding: 16px;
 
   .sb_collapse_icon {
     color: $clr-grey-500;
